Detail jízdenky, Plánek sedadel

--- a/src/components/JourneyDetail/style.css
+++ b/src/components/JourneyDetail/style.css
@@ -1,9 +1,15 @@
 /* ---------- styly pro podrobnosti cesty  ---------- */
 
 .stops {
-    margin-top: 2rem;
-  }
-  
-  .journey-detail {
-    padding: 2rem;
-  }
+  margin-top: 2rem;
+}
+
+.journey-detail {
+  padding: 2rem;
+}
+
+.container {
+  width: 720px;
+  margin-right: auto;
+  margin-left: auto;
+}
