--- a/src/components/Seat/style.css
+++ b/src/components/Seat/style.css
@@ -1,3 +1,5 @@
+/* ---------- styly pro sedadlo  ---------- */
+
 .selected-seat {
     padding: 2rem;
   }
@@ -65,4 +67,3 @@
     padding: 0 2rem;
     text-align: center;
   }
-  
